Reorganize build system.
- remove duplicate checks for backend libraries
- move backend checks into separate files
- properly use pkg-config
- fix DLL installation

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,5 +3,7 @@ ACLOCAL_AMFLAGS = -I m4 --install
 SUBDIRS = po
 endif
 RTMIDICONFIGRPATH = config/config.rpath
+DLLPROGRAMS = $(check_PROGRAMS)
+check_PROGRAMS =
 
 include %D%/Makefile.library
