--- a/Makefile.library
+++ b/Makefile.library
@@ -1,9 +1,21 @@
+# -*- makefile-automake -*-
 RTMIDITESTCXXFLAGS = $(EXTRA_RTMIDITESTCXXFLAGS) -I$(top_srcdir)/%D%
 RTMIDILIBRARYNAME = %D%/librtmidi@rtmidi_suffix@.la
 RTMIDITESTLDFLAGS = $(EXTRA_RTMIDITESTLDFLAGS) $(RTMIDILIBRARYNAME)
 lib_LTLIBRARIES += %D%/librtmidi@rtmidi_suffix@.la
-%C%_librtmidi@rtmidi_suffix@_la_LDFLAGS = -no-undefined $(RTMIDI__TS_LIBS)
-%C%_librtmidi@rtmidi_suffix@_la_CXXFLAGS = $(CXXFLAGS) $(CPPFLAGS) $(RTMIDI_TS_API) -DRTMIDI_NO_WARN_DEPRECATED
+DLLPROGRAMS += %D%/librtmidi@rtmidi_suffix@.*
+DLLPROGRAMS += %D%/.libs/librtmidi@rtmidi_suffix@.*
+%C%_librtmidi@rtmidi_suffix@_la_LDFLAGS = \
+	$(RTMIDI_LIBS) \
+	$(LDADD) \
+	-version-info 3:0:0 \
+	-no-undefined \
+	-v
+%C%_librtmidi@rtmidi_suffix@_la_CXXFLAGS = \
+	$(CXXFLAGS) \
+	$(CPPFLAGS) \
+	$(RTMIDI_API) \
+	-DRTMIDI_NO_WARN_DEPRECATED
 %C%_librtmidi@rtmidi_suffix@_la_SOURCES = \
   %D%/RtMidi.cpp \
   %D%/RtMidi.h
