--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,7 @@ build_script:
   - dir C:\msys64
   - dir C:\msys64\mingw64
   - dir C:\msys64\mingw64\x86_64-w64-mingw32
+  - dir C:\msys64\mingw64\x86_64-w64-mingw32\bin
   - dir C:\mingw-w64
   - SET PATH=C:\mingw-w64\bin;C:\msys64\mingw64\bin;%PATH%	
   - echo "%PATH%"
