--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,11 +10,14 @@ environment:
 build_script:
   - dir C:\
   - dir C:\msys64
+  - dir C:\msys64\usr
+  - dir C:\msys64\opt
   - dir C:\msys64\mingw64
   - dir C:\msys64\mingw64\x86_64-w64-mingw32
   - dir C:\msys64\mingw64\x86_64-w64-mingw32\bin
   - dir C:\mingw-w64
-  - dir C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64
+  - dir C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin
+  - dir C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\opt
   - SET PATH=C:\mingw-w64\bin;C:\msys64\mingw64\bin;%PATH%	
   - echo "%PATH%"
   - path
