--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ build_script:
   - dir C:\mingw-w64
   - dir C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin
   - dir C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\opt\bin
-  - SET PATH=C:\mingw-w64\bin;C:\msys64\mingw64\bin;%PATH%	
+  - SET PATH=C:\mingw-w64\bin;C:\msys64\mingw64\bin;C:\msys64\usr\bin;%PATH%	
   - echo "%PATH%"
   - path
   - bash -c "pacman -Suuy"
