add dash to branch exception patten

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ git:
   depth: 1
 branches:
   except:
-          /(?i:appveyor)/
+    - /(?i:appveyor)/
 sudo: false
 language: c++
 group: travis_latest
