--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,8 +26,8 @@ install:
       C:\msys64\usr\bin\pacman -Sc --noconfirm
     )
   - C:\msys64\usr\bin\pacman -Ss --noconfirm boost
-    C:\msys64\usr\bin\pacman -S --noconfirm --needed mingw-w64-x86_64-boost
-    C:\msys64\usr\bin\pacman -S --noconfirm --needed mingw64/mingw-w64-x86_64-boost
+  - C:\msys64\usr\bin\pacman -S --noconfirm --needed mingw-w64-x86_64-boost
+  - C:\msys64\usr\bin\pacman -S --noconfirm --needed mingw64/mingw-w64-x86_64-boost
   - C:\msys64\usr\bin\pacman -S --noconfirm --needed mingw64/mingw-w64-x68_64-boost
 
 build_script:
