--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ git:
   depth: 1
 branches:
   except:
-          /(?i:appveyor)/
+    - /(?i:appveyor)/
 sudo: false
 language: c++
 group: travis_latest
 os:
   - osx
-    osx_image: xcode9.2
   - linux
+
+osx_image: xcode9.2
 
 compiler:
   - gcc
