--- a/.travis.yml
+++ b/.travis.yml
@@ -89,5 +89,5 @@ script:
     - mkdir -p config
     - touch config/config.rpath
     - ./autogen.sh --disable-apisearch --with-$API $HOST && make && make -j4 && $TEST_RUNNER make check || (cat test-suite.log ; false)
-    - make distcheck
+    - make distcheck || (find rtmidi* -name test-suite.log | xargs cat ; false)
     - cat tests/errors.log
