--- a/.travis.yml
+++ b/.travis.yml
@@ -91,3 +91,4 @@ script:
     - ./autogen.sh --disable-apisearch --with-$API $HOST && make && make -j4 && $TEST_RUNNER make check || (cat test-suite.log ; false)
     - make distcheck || (find rtmidi* -name test-suite.log | xargs cat ; false)
     - cat tests/*.log
+    - cat */_build/sub/tests/*.log
