--- a/.travis.yml
+++ b/.travis.yml
@@ -76,18 +76,31 @@ addons:
 
 
 before_install:
-    - eval "${MATRIX_EVAL}"
-    - if test "$TRAVIS_OS_NAME" = osx ; then  brew update ; fi
-    - if test "$TRAVIS_OS_NAME" = osx ; then if brew upgrade boost ; then echo "upgraded" ; else echo "nothing to be done"; fi ;  fi
-    - if test "$TRAVIS_OS_NAME" = osx ; then rm -rf /usr/local/include/c++ ; fi # fix broken gcc installation
-    - if test "$TRAVIS_OS_NAME" = osx ; then brew install $EXTRA_BREW  gettext flex bison libtool autoconf jack   doxygen ; fi
-    - if test "$TRAVIS_OS_NAME" = osx ; then brew link --force $EXTRA_BREW gettext flex bison libtool autoconf jack ; fi
-    - mkdir -p config
-    - touch config/config.rpath
+    - |
+      eval "${MATRIX_EVAL}"
+      if test "$TRAVIS_OS_NAME" = osx
+      then
+	brew update
+	if brew upgrade boost
+	then
+		echo "upgraded"
+	else
+		echo "nothing to be done"
+	fi
+	rm -rf /usr/local/include/c++ # fix broken gcc installation
+    	brew install $EXTRA_BREW  gettext flex bison libtool autoconf jack   doxygen
+	brew link --force $EXTRA_BREW gettext flex bison libtool autoconf jack
+      fi
+      mkdir -p config
+      touch config/config.rpath
 
 script:
-    - mkdir -p config
-    - touch config/config.rpath
-    - ./autogen.sh --disable-apisearch --with-$API $HOST && make && make -j4 && $TEST_RUNNER make check || (cat test-suite.log ; false)
-    - make distcheck || (find rtmidi* -name test-suite.log | xargs cat ; false)
-    - cat tests/*.log
+    - |
+      mkdir -p config
+      touch config/config.rpath
+      ./autogen.sh --disable-apisearch --with-$API $HOST && \
+      		   make && \
+		   make -j4 && \
+		   $TEST_RUNNER make check || (cat test-suite.log ; false)
+      make distcheck || (find rtmidi* -name test-suite.log | xargs cat ; false)
+      cat tests/*.log
