--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ addons:
       description: Library for MIDI processing
     notification_email: keinstein_junior@gmx.net
     build_command_prepend: "autoreconf -i -f
-      && ./configure --with-alsa --with-jack"
+      && ./configure --with-alsa --with-jack --enable-code-coverage"
     build_command: "make -j4 multitarget"
     branch_pattern: coverity_scan
 before_install:
